<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity" >

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/missionselectbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_mission_select" />
        
        <Button
            android:id="@+id/reviewmissionsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/missionselectbutton"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_review_mission" />

		<Button
            android:id="@+id/spyprofilebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviewmissionsbutton"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:text="@string/title_activity_spy_profile" />
        
        <Button
            android:id="@+id/bonusfeaturebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spyprofilebutton"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_bonus_feature" />
		
        <Button
            android:id="@+id/settingsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bonusfeaturebutton"
            android:layout_centerHorizontal="true"
            android:text="@string/title_activity_settings" />

    </RelativeLayout>

</FrameLayout>
